--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -2,7 +2,7 @@
 
 <script>
 	function onSubmit(token) {
-		document.getElementById("demo-form").submit();
+		document.getElementById("rsvp-form").submit();
 	}
 </script>
 
@@ -13,7 +13,7 @@
 			<p>Please let us know if you can make it by <b>31.03.2022</b>.</p>
 		</header>
 
-		<form method="post" action="https://smartforms.dev/submit/618f94887a195017922da888">
+		<form id="rsvp-form" method="post" action="https://smartforms.dev/submit/618f94887a195017922da888">
 			<div class="row uniform">
 				<div class="4u 12u(medium)">
 					<input type="text" name="name" id="name" value="" placeholder="Full Name" />
