--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,7 +6,7 @@
 		<p>{{ page.description }}</p>
 
 		<ul class="actions">
-			<li><a href="#rsvp" class="button scrolly">RSVP</a></li>
+			<li><a href="#rsvp" class="button special scrolly">RSVP</a></li>
 		</ul>
 	</div>
 	<a href="#content" class="more scrolly">Learn More</a>
