--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -39,12 +39,8 @@
 					<textarea name="message" id="message" placeholder="Anything else we should know?" rows="6"></textarea>
 				</div>
 				<div class="12u">
-					<input type="checkbox" id="human" name="human">
-					<label for="human">I'm not a robot</label>
-				</div>
-				<div class="12u">
 					<ul class="actions">
-						<li><button class="g-recaptcha button special" data-sitekey="6Lcc2C8dAAAAAGPt2EHyeRo5AvfLD5lOK4uP5sWX" data-callback='onSubmit' data-action='submit'>Send RSVP</button></li>
+						<li><button class="g-recaptcha button special" data-sitekey="6Lcc2C8dAAAAAGPt2EHyeRo5AvfLD5lOK4uP5sWX" data-callback='onSubmit' data-action='submit' data-badge="inline">Send RSVP</button></li>
 						<li><input type="reset" value="Reset" /></li>
 					</ul>
 				</div>
