--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,6 +4,7 @@
 		<h1>{{ page.prefix }}</h1>
 		<h2>{{ page.banner }}</h2>
 		<p>{{ page.description }}</p>
+		<p id="countdown">&nbsp;</p>
 
 		<ul class="actions">
 			<li><a href="#rsvp" class="button special scrolly">RSVP</a></li>
@@ -11,3 +12,37 @@
 	</div>
 	<a href="#content" class="more scrolly">Learn More</a>
 </section>
+
+<script>
+	// Set the date we're counting down to
+	var countDownDate = new Date("{{ site.countdown_date }}").getTime();
+	
+	// Update the count down every 1 second
+	var x = setInterval(function() {
+	
+	  // Get today's date and time
+	  var now = new Date().getTime();
+	
+	  // Find the distance between now and the count down date
+	  var distance = countDownDate - now;
+	
+	  // Time calculations for days, hours, minutes and seconds
+	  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+	  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+	  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+	  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+	
+	  // Display the result
+	  document.getElementById("countdown").innerHTML =
+	  	days.toString() + "d "
+		  + hours.toString().padStart(2, '0') + "h "
+		  + minutes.toString().padStart(2, '0') + "m "
+		  + seconds.toString().padStart(2, '0') + "s";
+	
+	  // If the count down is finished, write some text
+	  if (distance < 0) {
+		clearInterval(x);
+		document.getElementById("countdown").innerHTML = "&nbsp;";
+	  }
+	}, 1000);
+	</script>
