--- a/assets/css/ie9.scss
+++ b/assets/css/ie9.scss
@@ -1,3 +1,7 @@
+---
+# Front matter comment to ensure Jekyll properly reads file.
+---
+
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
