--- a/assets/css/libs/_vars.scss
+++ b/assets/css/libs/_vars.scss
@@ -31,7 +31,8 @@
 
 // Palette.
 	$palette: (
-		bg:					#2e3842,
+		bg:					#683247,
+		link:               #ecaf47,
 		fg:					#fff,
 		fg-bold:			#fff,
 		fg-light:			rgba(255,255,255,0.5),
@@ -41,10 +42,10 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
+			bg:				#c32c51,
 			fg-bold:		#ffffff,
-			fg:				mix(#21b2a6, #ffffff, 25%),
-			fg-light:		mix(#21b2a6, #ffffff, 40%),
+			fg:				mix(#c32c51, #ffffff, 25%),
+			fg-light:		mix(#c32c51, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -52,10 +53,10 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#843148,
 			fg-bold:		#ffffff,
-			fg:				mix(#00ffcc, #ffffff, 25%),
-			fg-light:		mix(#00ffcc, #ffffff, 40%),
+			fg:				mix(#843148, #ffffff, 25%),
+			fg-light:		mix(#843148, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -63,10 +64,10 @@
 		),
 
 		accent3: (
-			bg:				#00f0ff,
+			bg:				#ecaf47,
 			fg-bold:		#ffffff,
-			fg:				mix(#00f0ff, #ffffff, 25%),
-			fg-light:		mix(#00f0ff, #ffffff, 40%),
+			fg:				mix(#ecaf47, #ffffff, 25%),
+			fg-light:		mix(#ecaf47, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -74,10 +75,10 @@
 		),
 
 		accent4: (
-			bg:				#76ddff,
+			bg:				#7f8f3f,
 			fg-bold:		#ffffff,
-			fg:				mix(#76ddff, #ffffff, 25%),
-			fg-light:		mix(#76ddff, #ffffff, 40%),
+			fg:				mix(#7f8f3f, #ffffff, 25%),
+			fg-light:		mix(#7f8f3f, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
