--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
-<!-- Footer -->
-<footer id="footer">
-	<ul class="copyright">
-		<li>&copy; Stephanie Li & Matthew Pomaroff 2022</li>
-	</ul>
-</footer>
+	<!-- Footer -->
+	{% if site.enabled %}
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy; Stephanie Li & Matthew Pomaroff 2022</li>
+		</ul>
+	</footer>
+	{% endif %}
 
-</div>
+</div> <!-- Page Wrapper -->
 
 <!-- Scripts -->
 <script src="{{ "/assets/js/jquery.min.js" | absolute_url }}"></script>
@@ -15,7 +17,3 @@
 <script src="{{ "/assets/js/util.js" | absolute_url }}"></script>
 <!--[if lte IE 8]><script src="{{ "/assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
 <script src="{{ "/assets/js/main.js" | absolute_url }}"></script>
-
-</body>
-
-</html>
