--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,10 @@
 
 	<!-- Header -->
 	<header id="header" {% if page.layout == 'default' %} class="alt" {% endif %}>
-		<h1><a href="{{ "" | absolute_url }}/">Steph & Matt</a></h1>
+		<h1><a href="{{ "" | relative_url }}/">Steph & Matt</a></h1>
+		
+		{% if site.enabled %}
+		
 		<nav id="nav">
 			<ul>
 				<li class="special">
@@ -11,13 +14,15 @@
 					<div id="menu">
 						<ul>
 							{% for page in site.pages %} {% if page.layout == "default" %}
-							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+							<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
 							{% endif %} {% endfor %} {% for page in site.pages %} {% if page.layout == "page" %}
-							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+							<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
 							{% endif %} {% endfor %}
 						</ul>
 					</div>
 				</li>
 			</ul>
 		</nav>
+
+		{% endif %}
 	</header>
