--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@
 
     {% include header.html %}
 
+    {% if site.enabled %}
+
     <!-- Main -->
     <article id="main">
         <header{% if page.image %} style="background-image: url('{% if site.featured-image-source %}{{ page.image | prepend: site.featured-image-source | absolute_url }}{% else %}{{ "" | absolute_url }}/assets/images/{{ page.image }}{% endif %}');"{% endif %}>
@@ -21,6 +23,14 @@
             </div>
         </section>
     </article>
+
+    {% else %}
+
+    <script>
+        window.location = "{{ "" | absolute_url }}";
+    </script>
+
+    {% endif %}
 
     {% include footer.html %}
 
