Updating mobile style

--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -31,11 +31,11 @@
 				<div class="4u 12u(medium)">
 					<input type="email" name="email" id="email" value="" placeholder="Email" required />
 				</div>
-				<div class="6u 12u(small)">
+				<div class="12u">
 					<input type="radio" id="attending" name="attending" required>
 					<label for="attending">We are attending</label>
 				</div>
-				<div class="6u 12u(small)">
+				<div class="12u">
 					<input type="radio" id="not-attending" name="attending">
 					<label for="not-attending">We send our apologies</label>
 				</div>
