--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1586,23 +1586,23 @@
 			opacity: 0;
 		}
 
-		@include breakpoint(small) {
-			@include padding(7em, 3em);
-			height: auto;
-			min-height: 0;
+		// @include breakpoint(small) {
+		// 	@include padding(7em, 3em);
+		// 	height: auto;
+		// 	min-height: 0;
 
-			h2 {
-				font-size: 1.25em;
-			}
+		// 	h2 {
+		// 		font-size: 1.25em;
+		// 	}
 
-			br {
-				display: none;
-			}
+		// 	br {
+		// 		display: none;
+		// 	}
 
-			.more {
-				display: none;
-			}
-		}
+		// 	.more {
+		// 		display: none;
+		// 	}
+		// }
 	}
 
 	body.is-loading {
@@ -1629,50 +1629,50 @@
 
 /* CTA */
 
-	#cta {
-		.inner {
-			@include vendor('display', 'flex');
-			max-width: 45em;
+	// #cta {
+	// 	.inner {
+	// 		@include vendor('display', 'flex');
+	// 		max-width: 45em;
 
-			header {
-				@include vendor('order', '1');
-				padding-right: 3em;
-				width: 70%;
+	// 		header {
+	// 			@include vendor('order', '1');
+	// 			padding-right: 3em;
+	// 			width: 70%;
 
-				p {
-					color: inherit;
-				}
-			}
+	// 			p {
+	// 				color: inherit;
+	// 			}
+	// 		}
 
-			.actions {
-				@include vendor('order', '2');
-				width: 30%;
-			}
+	// 		.actions {
+	// 			@include vendor('order', '2');
+	// 			width: 30%;
+	// 		}
 
-			@include breakpoint(medium) {
-				display: block;
-				text-align: center;
+	// 		@include breakpoint(medium) {
+	// 			display: block;
+	// 			text-align: center;
 
-				header {
-					padding-right: 0;
-					width: 100%;
-				}
+	// 			header {
+	// 				padding-right: 0;
+	// 				width: 100%;
+	// 			}
 
-				.actions {
-					margin-left: auto;
-					margin-right: auto;
-					max-width: 20em;
-					width: 100%;
-				}
-			}
+	// 			.actions {
+	// 				margin-left: auto;
+	// 				margin-right: auto;
+	// 				max-width: 20em;
+	// 				width: 100%;
+	// 			}
+	// 		}
 
-			@include breakpoint(small) {
-				.actions {
-					max-width: none;
-				}
-			}
-		}
-	}
+	// 		@include breakpoint(small) {
+	// 			.actions {
+	// 				max-width: none;
+	// 			}
+	// 		}
+	// 	}
+	// }
 
 /* Main */
 
@@ -1827,6 +1827,7 @@
 			.wrapper.style4 {
 				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../../assets/images/banner.jpg")'));
 				background-position: center center;
+				background-attachment: fixed;
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
