--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -1,57 +1,62 @@
-<script src="https://www.google.com/recaptcha/api.js?render=6Lcc2C8dAAAAAGPt2EHyeRo5AvfLD5lOK4uP5sWX"></script>
-
 <script>
-	$('#rsvp-form').submit(function(event) {
-        event.preventDefault(); //prevent form submit before captcha is completed
-        grecaptcha.ready(function() {
-          grecaptcha.execute('6Lcc2C8dAAAAAGPt2EHyeRo5AvfLD5lOK4uP5sWX', {action: 'submit_rsvp'}).then(function(token) {
-			  $('#rsvp-form').prepend('<input type="hidden" name="token" value="' + token + '">');
-			  $('#rsvp-form').prepend('<input type="hidden" name="action" value="submit_rsvp">');
-			  $('#rsvp-form').unbind('submit').submit();
-          });
+    window.recaptcha_onload = function() {
+        document.getElementById("rsvp-form").addEventListener("submit", function(e) {
+            event.preventDefault(); //prevent form submit before captcha is completed
+
+            grecaptcha.ready(function() {
+                grecaptcha.execute('{{ site.rsvp_captcha }}', {action: 'submit_rsvp'}).then(function(token) {
+                    $('#rsvp-form').prepend('<input type="hidden" name="token" value="' + token + '">');
+                    $('#rsvp-form').prepend('<input type="hidden" name="action" value="submit_rsvp">');
+                    $('#rsvp-form').unbind('submit').submit();
+                });
+            });
         });
-    });
+
+        document.getElementById("rsvp-form-submit").disabled = false;
+    }
 </script>
 
-<section id="rsvp" class="wrapper style4">
-	<div class="inner">
-		<header>
-			<h2>RSVP</h2>
-			<p>Please let us know if you can make it by <b>31.03.2022</b>.</p>
-		</header>
+<script async src="https://www.google.com/recaptcha/api.js?onload=recaptcha_onload"></script>
 
-		<form id="rsvp-form" method="post" action="https://smartforms.dev/submit/618f94887a195017922da888">
-			<div class="row uniform">
-				<div class="4u 12u(medium)">
-					<input type="text" name="name" id="name" value="" placeholder="Full Name" required />
-				</div>
-				<div class="4u 12u(medium)">
-					<input type="text" name="partner-name" id="partner-name" value="" placeholder="Partner's Full Name" />
-				</div>
-				<div class="4u 12u(medium)">
-					<input type="email" name="email" id="email" value="" placeholder="Email" required />
-				</div>
-				<div class="12u">
-					<input type="radio" id="attending" name="attending" required>
-					<label for="attending">We are attending</label>
-				</div>
-				<div class="12u">
-					<input type="radio" id="not-attending" name="attending">
-					<label for="not-attending">We send our apologies</label>
-				</div>
-				<div class="12u">
-					<textarea name="dietary-requirements" id="dietary-requirements" placeholder="Dietary requirements" rows="3"></textarea>
-				</div>
-				<div class="12u">
-					<textarea name="message" id="message" placeholder="Anything else we should know?" rows="6"></textarea>
-				</div>
-				<div class="12u">
-					<ul class="actions">
-						<li><input type="submit" value="Send RSVP" class="special" /></li>
-						<li><input type="reset" value="Reset" /></li>
-					</ul>
-				</div>
-			</div>
-		</form>
-	</div>
+<section id="rsvp" class="wrapper style4">
+    <div class="inner">
+        <header>
+            <h2>RSVP</h2>
+            <p>Please let us know if you can make it by <b>{{ site.rsvp_date }}</b>.</p>
+        </header>
+
+        <form id="rsvp-form" method="post" action="{{ site.rsvp_post }}">
+            <div class="row uniform">
+                <div class="4u 12u(medium)">
+                    <input type="text" name="name" id="name" value="" placeholder="Full Name" required />
+                </div>
+                <div class="4u 12u(medium)">
+                    <input type="text" name="partner-name" id="partner-name" value="" placeholder="Partner's Full Name" />
+                </div>
+                <div class="4u 12u(medium)">
+                    <input type="email" name="email" id="email" value="" placeholder="Email" required />
+                </div>
+                <div class="12u">
+                    <input type="radio" id="attending" name="attending" required>
+                    <label for="attending">We are attending</label>
+                </div>
+                <div class="12u">
+                    <input type="radio" id="not-attending" name="attending">
+                    <label for="not-attending">We send our apologies</label>
+                </div>
+                <div class="12u">
+                    <textarea name="dietary-requirements" id="dietary-requirements" placeholder="Dietary requirements" rows="3"></textarea>
+                </div>
+                <div class="12u">
+                    <textarea name="message" id="message" placeholder="Anything else we should know?" rows="6"></textarea>
+                </div>
+                <div class="12u">
+                    <ul class="actions">
+                        <li><input id="rsvp-form-submit" type="submit" value="Send RSVP" class="special" disabled /></li>
+                        <li><input type="reset" value="Reset" /></li>
+                    </ul>
+                </div>
+            </div>
+        </form>
+    </div>
 </section>
