--- a/assets/css/libs/_mixins.scss
+++ b/assets/css/libs/_mixins.scss
@@ -11,12 +11,16 @@
 			content: $content;
 		}
 
+		font-weight: 900;
+		font-family: "Font Awesome 6 Free";
 		-moz-osx-font-smoothing: grayscale;
 		-webkit-font-smoothing: antialiased;
-		font-family: FontAwesome;
+		display: inline-block;
+		display: var(--fa-display,inline-block);
 		font-style: normal;
-		font-weight: normal;
-		text-transform: none !important;
+		font-variant: normal;
+		line-height: 1;
+		text-rendering: auto;
 
 	}
 
