--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,12 +1,13 @@
 <!-- content -->
 <section id="content" class="wrapper alt style2">
-	{% for page in site.pages %}
+	{% assign sorted_pages = site.pages | sort: 'page_order' %}
+	{% for page in sorted_pages %}
 
 	{% if page.layout == 'default' %}{% continue %}{% endif %}
 	{% if page.title %}
 
 	<section class="spotlight">
-		<div class="image">{% if page.image %}<img src="/assets/images/{{ page.image }}" alt="" />{% endif %}</div>
+		<div class="image">{% if page.image_thumbail %}<img src="/assets/images/{{ page.image_thumbail }}" alt="" />{% endif %}</div>
 		<div class="content">
 			<h2><a href="{{ page.url | relative_url }}" class="link">{{ page.title }}</a></h2>
 			<p>{{ page.description }}</p>
