--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -8,7 +8,7 @@
 
 		{% if site.enabled %}
 		<ul class="actions">
-			<li><a href="#rsvp" class="button special scrolly">RSVP</a></li>
+			<li><a href="#rsvp" class="button scrolly">RSVP</a></li>
 		</ul>
 		{% endif %}
 	</div>
