--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,25 +3,23 @@
 
 	<!-- Header -->
 	<header id="header" {% if page.layout == 'default' %} class="alt" {% endif %}>
-		<h1><a href="{{ "" | relative_url }}/">Steph & Matt</a></h1>
+		<h1><a href="{{ "" | relative_url }}/"><i class="fas fa-heart icon style4"></i> Steph & Matt</a></h1>
 		
 		{% if site.enabled %}
+
+		{% assign sorted_pages = site.pages | sort: 'page_order' %}
 		
 		<nav id="nav">
-			<ul>
-				<li class="special">
-					<a href="#menu" class="menuToggle"><span>Menu</span></a>
-					<div id="menu">
-						<ul>
-							{% for page in site.pages %} {% if page.layout == "default" %}
-							<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
-							{% endif %} {% endfor %} {% for page in site.pages %} {% if page.layout == "page" %}
-							<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
-							{% endif %} {% endfor %}
-						</ul>
-					</div>
-				</li>
-			</ul>
+			<a href="#menu" class="menuToggle"><span>Menu</span></a>
+			<div id="menu">
+				<ul>
+					{% for page in sorted_pages %} {% if page.layout == "default" %}
+					<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+					{% endif %} {% endfor %} {% for page in sorted_pages %} {% if page.layout == "page" %}
+					<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+					{% endif %} {% endfor %}
+				</ul>
+			</div>
 		</nav>
 
 		{% endif %}
