--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,7 @@
+---
+layout: html_minifier
+---
+
 <!DOCTYPE HTML>
 <html>
     
@@ -11,11 +15,12 @@
 
     <!-- Main -->
     <article id="main">
-        <header{% if page.image %} style="background-image: url('{% if site.featured-image-source %}{{ page.image | prepend: site.featured-image-source | absolute_url }}{% else %}{{ "" | absolute_url }}/assets/images/{{ page.image }}{% endif %}');"{% endif %}>
+        <header {% if page.header_class %} class="{{ page.header_class }}"{% endif %}>
             <h2>{{ page.title }}</h2>
-            <p>{{ page.description }}</p>
+            <!--<p>{{ page.description }}</p>-->
         </header>
-        <section class="wrapper style4">
+
+        <section class="wrapper style2">
             <div class="inner">
 
                 {{ content }}
