--- a/assets/css/libs/_vars.scss
+++ b/assets/css/libs/_vars.scss
@@ -31,7 +31,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#683247,
+		bg:					#521115,
 		link:               #ecaf47,
 		fg:					#fff,
 		fg-bold:			#fff,
@@ -42,10 +42,10 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#c32c51,
+			bg:				#ac2f37,
 			fg-bold:		#ffffff,
-			fg:				mix(#c32c51, #ffffff, 25%),
-			fg-light:		mix(#c32c51, #ffffff, 40%),
+			fg:				mix(#ac2f37, #ffffff, 25%),
+			fg-light:		mix(#ac2f37, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -53,10 +53,10 @@
 		),
 
 		accent2: (
-			bg:				#843148,
+			bg:				#521115,
 			fg-bold:		#ffffff,
-			fg:				mix(#843148, #ffffff, 25%),
-			fg-light:		mix(#843148, #ffffff, 40%),
+			fg:				mix(#521115, #ffffff, 25%),
+			fg-light:		mix(#521115, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
