--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ layout: html_minifier
 <html>
 {% include head.html %}
 
-<body class="landing is-loading">
+<body class="landing">
 
     {% include header.html %}
     {% include banner.html %}
