Improve RSVP layout

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,7 +4,8 @@
 		<h1>{{ page.prefix }}</h1>
 		<h2>{{ page.banner }}</h2>
 		<p>{{ page.description }}</p>
-		<p id="countdown">&nbsp;</p>
+		
+		<div id="countdown">&nbsp;</div>
 
 		{% if site.enabled %}
 		<ul class="actions">
