--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1734,6 +1734,12 @@
 				background-attachment: scroll;
 			}
 		}
+
+		#banner {
+			position: fixed;
+			height: 100%;
+			width: 100%;
+		}
 	}
 
 /* Footer */
