--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1736,7 +1736,7 @@
 		}
 
 		#banner {
-			-webkit-position: -webkit-fixed;
+			-webkit-position: fixed;
 			-webkit-width: -webkit-fill-available;
 			-webkit-height: -webkit-fill-available;
 		}
