--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,6 +23,8 @@ layout: html_minifier
         <section class="wrapper style2">
             <div class="inner">
 
+                <div class="back-container"><a class="go-back"><i class="fas fa-backward-step"></i> Go back</a></div>
+
                 {{ content }}
 
             </div>
