--- a/assets/css/libs/_vars.scss
+++ b/assets/css/libs/_vars.scss
@@ -42,11 +42,11 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#ac2f37,
-			fg-bold:		#ffffff,
-			fg:				mix(#ac2f37, #ffffff, 25%),
-			fg-light:		mix(#ac2f37, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
+			bg:				#fbe6d3,
+			fg-bold:		#000000,
+			fg:				mix(#000000, #ffffff, 25%),
+			fg-light:		mix(#555555, #ffffff, 40%),
+			border:			rgba(255,255,255,0.5),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
 			border2-bg:		rgba(255,255,255,0.2)
