--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div id="page-wrapper">
 
 	<!-- Header -->
-	<header id="header" {% if page.layout == 'default' %} class="alt" {% endif %}>
+	<header id="header" {% if page.layout == 'home' %} class="alt" {% endif %}>
 		<h1><a href="{{ "" | relative_url }}/"><i class="fas fa-heart icon style4"></i> Steph & Matt</a></h1>
 		
 		{% if site.enabled %}
@@ -13,11 +13,17 @@
 			<a href="#menu" class="menuToggle"><span>Menu</span></a>
 			<div id="menu">
 				<ul>
-					{% for page in sorted_pages %} {% if page.layout == "default" %}
-					<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
-					{% endif %} {% endfor %} {% for page in sorted_pages %} {% if page.layout == "page" %}
-					<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
-					{% endif %} {% endfor %}
+					{% for page in sorted_pages %}
+						{% if page.layout == "home" %}
+							<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+						{% endif %}
+					{% endfor %}
+					
+					{% for page in sorted_pages %}
+						{% if page.layout == "page" %}
+						<li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+						{% endif %}
+					{% endfor %}
 				</ul>
 			</div>
 		</nav>
