--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,25 @@
 		visibility: hidden;
 	}
 
+	.back-container {
+		position: relative;
+
+		.go-back {
+			position: absolute;
+			font-size: 0.8em;
+			top: -3em;
+			right: 0;
+		}
+	}
+
+	.back-to-top-container {
+		text-align: center;
+
+		.back-to-top {
+			font-size: 0.8em;
+		}
+	}
+
 /* Basic */
 
 	@-ms-viewport {
@@ -1289,11 +1308,25 @@
 		}
 	}
 
+	body.webp {
+		#menu {
+			@include vendor('background-image', ('linear-gradient(top, rgba(255,255,255,0.2), rgba(251,230,230,0.5))', 'url("../../assets/images/menu-background.webp")', 'linear-gradient(top, rgba(251,230,230,1), rgba(251,230,230,1))'));
+		}
+	}
+
+	body.no-webp {
+		#menu {
+			@include vendor('background-image', ('linear-gradient(top, rgba(255,255,255,0.2), rgba(251,230,230,0.5))', 'url("../../assets/images/menu-background.png")', 'linear-gradient(top, rgba(251,230,230,1), rgba(251,230,230,1))'));
+		}
+	}
+
 	#menu {
 		@include vendor('transform', 'translateX(20em)');
 		@include vendor('transition', 'transform #{_duration(menu)} ease');
 		-webkit-overflow-scrolling: touch;
-		background: _palette(accent1, bg);
+		background-size: 100% auto;
+		background-position: top right;
+		background-repeat: no-repeat;
 		color: _palette(accent1, fg-bold);
 		height: 100%;
 		max-width: 80%;
@@ -1308,16 +1341,35 @@
 		ul {
 			list-style: none;
 			padding: 0;
+			margin-top: 2em;
 
 			> li {
-				border-top: solid 1px _palette(accent1, border);
+				//border-top: solid 1px _palette(accent1, border);
 				margin: 0.5em 0 0 0;
 				padding: 0.5em 0 0 0;
+				position: relative;
+
+				&:after {
+					content: '';
+					z-index: -1;
+					width: 10em;
+					height: 1px;
+					position: absolute;
+					bottom: -0.5em;
+					@include vendor('background-image', ('linear-gradient(left, rgba(0,0,0,0.125), rgba(0,0,0,0))'));
+				}
 
 				&:first-child {
 					border-top: 0 !important;
 					margin-top: 0 !important;
 					padding-top: 0 !important;
+				}
+
+				&:last-child {
+					&:after {
+						content: none;
+						background: none;
+					}
 				}
 
 				> a {
@@ -1339,12 +1391,6 @@
 
 		.close {
 			@include icon(false, after);
-			// background-image: url('images/close.svg');
-			// background-position: 4.85em 1em;
-			// background-repeat: no-repeat;
-			// border: 0;
-			// cursor: pointer;
-			// display: block;
 			border: 0;
 			display: block;
 			cursor: pointer;
@@ -1631,6 +1677,7 @@
 				opacity: 0;
 			}
 		}
+
 		#banner {
 			h2 {
 				@include vendor('transform', 'scale(0.95)');
@@ -1664,7 +1711,7 @@
 
 	#main {
 		> header {
-			@include padding(12em, 0);
+			@include padding(14em, 0);
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -1678,13 +1725,13 @@
 			}
 
 			&.registry {
-				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.6))', 'url("../../assets/images/registry.jpg")'));
+				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.5))', 'url("../../assets/images/registry.jpg")'));
 				background-attachment: scroll;
 				background-position: 50% 57%;
 			}
 
-			&.schedule {
-				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.6))', 'url("../../assets/images/schedule.jpg")'));
+			&.the-day {
+				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.5))', 'url("../../assets/images/the-day.jpg")'));
 				background-attachment: scroll;
 				background-position: 50% 40%;
 			}
@@ -1706,11 +1753,11 @@
 			}
 
 			@include breakpoint(xlarge) {
-				@include padding(10em, 0);
+				@include padding(14em, 0);
 			}
 
 			@include breakpoint(large) {
-				@include padding(8em, 3em);
+				@include padding(12em, 3em);
 			}
 
 			@include breakpoint(medium) {
@@ -1718,7 +1765,7 @@
 			}
 
 			@include breakpoint(small) {
-				@include padding(5em, 3em);
+				@include padding(8em, 3em);
 
 				h2 {
 					font-size: 1.25em;
