--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,9 +15,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollex/0.2.1/jquery.scrollex.min.js" integrity="sha512-eFxuATJvNeUrxxoS/5AeVi6X4wY6IdI9kAtRbuGyD2XTLoJ/R9uBce9lsf2UyvY0tQYlUkbs1wV9jhOPxANCzg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="{{ "/assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/skel/3.0.1/skel.min.js" integrity="sha512-LpUt6fJuTMm3o0q5w8ydMXpGho2tqAoaRu6MP6Tt0X0Klct8xlToutBk7Wh51RL9n7/QSplQnrUA1U3S5YzMng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="{{ "/assets/js/util.js" | absolute_url }}"></script>
+<script src="{{ "/assets/js/util.min.js" | absolute_url }}"></script>
 <!--[if lte IE 8]><script src="{{ "/assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
-<script src="{{ "/assets/js/main.js" | absolute_url }}"></script>
+<script src="{{ "/assets/js/main.min.js" | absolute_url }}"></script>
 
 {% if page.js %}
 <script src="{{ page.js | absolute_url }}"></script>
