--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -16,7 +16,7 @@
     }
 </script>
 
-<script async src="https://www.google.com/recaptcha/api.js?onload=recaptcha_onload"></script>
+<script src="https://www.google.com/recaptcha/api.js?render={{ site.rsvp_captcha }}&onload=recaptcha_onload" async defer></script>
 
 <section id="rsvp" class="wrapper style4">
     <div class="inner">
